--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -5,6 +5,7 @@
 
 scrollback_lines 100000
 scrollbar scrolled
+scrollback_pager less --ignore-case --quit-on-intr --use-color --wordwrap --raw-control-chars --LINE-NUMBERS +INPUT_LINE_NUMBER
 
 
 ##############
