--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -23,7 +23,7 @@ source = ~/.config/hypr/hyprland.d/clipboard.conf
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = swaync
 exec-once = waybar
-exec-once = $terminal
+exec-once = $terminal --hold zsh -c 'echo && fastfetch'
 exec-once = /usr/lib/pam_kwallet_init
 
 #############################
@@ -143,7 +143,7 @@ master {
 
 # https://wiki.hypr.land/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    force_default_wallpaper = 1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
 
@@ -157,7 +157,7 @@ input {
     kb_layout = us,il
     kb_variant =
     kb_model =
-    kb_options = grp:alt_shift_toggle
+    kb_options = grp:ctrls_toggle
     kb_rules =
 
     follow_mouse = 1
