--- a/dot_config/hypr/hyprland.d/key-bindings.conf
+++ b/dot_config/hypr/hyprland.d/key-bindings.conf
@@ -20,11 +20,9 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F11, fullscreen
 
 # Window/Workspace control
-bind = $mainMod ALT, RIGHT, workspace, m+1
-bind = $mainMod ALT, LEFT, workspace, m-1
-bind = $mainMod ALT, DOWN, swapnext, next
-bind = $mainMod SHIFT, RIGHT, movetoworkspace, +1
-bind = $mainMod SHIFT, LEFT, movetoworkspace, -1
+# bind = $mainMod ALT, DOWN, swapnext, next
+bind = $mainMod SHIFT ALT, UP, movetoworkspace, r+1
+bind = $mainMod SHIFT ALT, DOWN, movetoworkspace, r-1
 bind = $mainMod SHIFT ALT, RIGHT, movetoworkspace, m+1
 bind = $mainMod SHIFT ALT, LEFT, movetoworkspace, m-1
 bind = $mainMod CTRL, UP, swapwindow, u
@@ -42,17 +40,21 @@ bind = $mainMod, RIGHT, movefocus, r
 bind = $mainMod, UP, movefocus, u
 bind = $mainMod, DOWN, movefocus, d
 
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
+# Switch workspaces with
+bind = $mainMod ALT, UP, workspace, r+1
+bind = $mainMod ALT, DOWN, workspace, r-1
+bind = $mainMod ALT, RIGHT, workspace, m+1
+bind = $mainMod ALT, LEFT, workspace, m-1
+bind = $mainMod, 1, workspace, r~1
+bind = $mainMod, 2, workspace, r~2
+bind = $mainMod, 3, workspace, r~3
+bind = $mainMod, 4, workspace, r~4
+bind = $mainMod, 5, workspace, r~5
+bind = $mainMod, 6, workspace, r~6
+bind = $mainMod, 7, workspace, r~7
+bind = $mainMod, 8, workspace, r~8
+bind = $mainMod, 9, workspace, r~9
+bind = $mainMod, 0, workspace, r~10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
@@ -106,3 +108,6 @@ bind = $mainMod ALT, SPACE, exec, kitten quick-access-terminal
 # Emoji Picker
 bind = $mainMod, PERIOD, exec, rofimoji --action copy
 bind = $mainMod ALT, PERIOD, exec, plasma-emojier
+
+# Freeze Process
+bind = $mainMod, ESCAPE, exec, hyprfreeze -a
