--- a/dot_config/hypr/hyprland.d/monitors.conf
+++ b/dot_config/hypr/hyprland.d/monitors.conf
@@ -7,4 +7,4 @@
 # monitor = name, resolution, position, scale
 
 monitor = eDP-1, preferred, auto-center-down, 1
-monitor = , preferred, auto, auto
+monitor = , preferred, auto-center-up, auto
