Update .config/hypr/hyprland.d/monitors.conf Update .gitconfig

--- a/dot_config/hypr/hyprland.d/monitors.conf
+++ b/dot_config/hypr/hyprland.d/monitors.conf
@@ -7,4 +7,7 @@
 # monitor = name, resolution, position, scale
 
 monitor = eDP-1, preferred, auto-center-down, 1
+monitor = desc: Microstep MSI G32CQ4 E2, 2560x1440@165, auto-center-down, auto, cm, auto
+monitor = desc: LG Electronics LG ULTRAGEAR 0x0000010C, 1920x1080@165, auto-center-right, auto, transform, 3
+monitor = desc: LG Electronics LG ULTRAGEAR 0x0000010E, 1920x1080@165, auto-center-left, auto
 monitor = , preferred, auto-center-up, auto
