--- a/dot_config/hypr/hyprland.d/monitors.conf
+++ b/dot_config/hypr/hyprland.d/monitors.conf
@@ -6,8 +6,41 @@
 # See https://wiki.hypr.land/Configuring/Monitors/
 # monitor = name, resolution, position, scale
 
-monitor = eDP-1, preferred, auto-center-down, 1
-monitor = desc: Microstep MSI G32CQ4 E2, 2560x1440@165, auto-center-down, auto, cm, auto
-monitor = desc: LG Electronics LG ULTRAGEAR 0x0000010C, 1920x1080@165, auto-center-right, auto, transform, 3
-monitor = desc: LG Electronics LG ULTRAGEAR 0x0000010E, 1920x1080@165, auto-center-left, auto
-monitor = , preferred, auto-center-up, auto
+monitorv2 {
+	output = eDP-1
+	mode = preferred
+	position = auto-center-down
+	scale = 1
+}
+
+monitorv2 {
+	output = desc: Microstep MSI G32CQ4 E2
+	mode = 2560x1440@165
+	# position = auto-center-down
+	position = 1920x275
+	scale = auto
+}
+
+monitorv2 {
+	output = desc: LG Electronics LG ULTRAGEAR 0x0000010C
+	mode = 1920x1080@165
+	# position = auto-center-right
+	position = 4480x0
+	scale = auto
+	transform = 3
+}
+
+monitorv2 {
+	output = desc: LG Electronics LG ULTRAGEAR 0x0000010E
+	mode = 1920x1080@165
+	# position = auto-center-left
+	position = 0x635
+	scale = auto
+}
+
+monitorv2 {
+	output = 
+	mode = preferred
+	position = auto-center-up
+	scale = auto
+}
