--- a/dot_config/hypr/hyprland.d/monitors.conf
+++ b/dot_config/hypr/hyprland.d/monitors.conf
@@ -18,6 +18,12 @@ monitorv2 {
 	mode = 2560x1440@165
 	position = 1920x275
 	scale = auto
+	supports_wide_color = 1
+	supports_hdr = 1
+	# cm = hdr # un/comment to toggle HDR
+	bitdepth = 10
+	sdrbrightness = 1.25
+	sdrsaturation = 1.2
 }
 
 monitorv2 {
