--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -161,6 +161,8 @@ input {
     kb_rules =
 
     follow_mouse = 1
+    # float_switch_override_focus = 0
+    # mouse_refocus = false
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
@@ -193,3 +195,12 @@ windowrule = suppress_event maximize, match:class .*
 
 # Fix some dragging issues with XWayland
 windowrule = no_focus on, match:class ^$, match:title ^$, match:xwayland 1, match:float 1, match:fullscreen 0, match:pin 0
+
+# JetBrains Rider - Main window
+windowrulev2 = tile, class:^(jetbrains-rider)$, title:^((?!win).*)$
+
+# JetBrains Rider - Popups, tooltips, and dialogs
+windowrulev2 = float, class:^(jetbrains-rider)$, title:^(win.*)$
+windowrulev2 = nofocus, class:^(jetbrains-rider)$, title:^(win.*)$
+windowrulev2 = noinitialfocus, class:^(jetbrains-rider)$, title:^(win.*)$
+windowrulev2 = animation popin 20%, class:^(jetbrains-rider)$, title:^(win.*)$
